<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MyActivity">

    <!--The readio buttons that represent the incedints options.-->
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:weightSum="1"
        android:id="@+id/radioGroup"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <!--car stolen report-->
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="55px"
            android:text="@string/car_stolen"
            android:id="@+id/radioButton"
            android:layout_gravity="left"
            android:checked="false"
            android:textSize="20dp"
            android:layout_weight="0.13"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:layout_marginBottom="10px"
            android:background="@drawable/border_rounded_blue"
            />
        <!--home brokin report-->
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="55px"
            android:text="@string/house_beak"
            android:id="@+id/radioButton2"
            android:layout_gravity="left"
            android:checked="false"
            android:textSize="20dp"
            android:layout_weight="0.13"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:layout_marginBottom="10px"
            android:background="@drawable/border_rounded_blue"/>
        <!--street incedint report-->
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="55px"
            android:text="@string/street_accident"
            android:id="@+id/radioButton3"
            android:layout_gravity="left"
            android:checked="false"
            android:textSize="20dp"
            android:layout_weight="0.13"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:layout_marginBottom="10px"
            android:background="@drawable/border_rounded_blue"/>
        <!--phone stolen report-->
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="55px"
            android:text="@string/phone_lost"
            android:id="@+id/radioButton4"
            android:layout_gravity="left"
            android:checked="false"
            android:textSize="20dp"
            android:layout_weight="0.13"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:layout_marginBottom="10px"
            android:background="@drawable/border_rounded_blue"/>
        <!--car collid report-->
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="55px"
            android:text="@string/car_accident"
            android:id="@+id/radioButton5"
            android:layout_gravity="left"
            android:checked="false"
            android:textSize="20dp"
            android:layout_weight="0.13"
            android:paddingLeft="20px"
            android:paddingRight="20px"
            android:layout_marginBottom="10px"
            android:background="@drawable/border_rounded_blue"/>

    </RadioGroup>
    <!--button to send the report to the Garda server-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="40px"
        android:background="@drawable/border_rounded_button"/>

</RelativeLayout>
