<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context="ahmedy.gar1.LoginActivity">

    <!-- Login progress -->
    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_gravity="center_vertical">
            <!--GAR picture-->
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                android:layout_marginTop="0px"
                android:layout_marginBottom="10px"
                />
            <!--asking the user to sign up with their personal infromation-->
            <TextView android:text="@string/personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50px"
                android:padding="10px"
                android:textColor="#000000"
                />
            <!--to get user's name-->
            <EditText android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="7px"
                android:padding="15px"
                android:textSize="70px"
                android:background="@drawable/border_rounded_blue"
                />
            <!--to get user's phone numbber-->
            <EditText android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="7px"
                android:padding="15px"
                android:textSize="70px"
                android:background="@drawable/border_rounded_blue"
                />
            <!--to get user's home address-->
            <EditText android:id="@+id/home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/home_address"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="5"
                android:singleLine="true"
                android:layout_marginBottom="17px"
                android:padding="15px"
                android:textSize="70px"
                android:background="@drawable/border_rounded_blue"
                />
            <!--save button-->
            <Button android:id="@+id/save" style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/save"
                android:textSize="50px"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:background="@drawable/border_rounded_button"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

